# oot_mcuboot_showcasing

./: CMakeLists.txt  prj.conf
boards/: nrf52840dk_nrf52840.conf
